--- a/app/static/_features.html
+++ b/app/static/_features.html
@@ -28,8 +28,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="index.html">
-                <strong>LTRWP</strong>
+            <a class="brand logo" href="index.html">
+                    <strong><img src="img/logo_top_corner.png"></strong>
             </a>
             <div class="nav-collapse collapse">
                 <ul class="nav pull-right">
