Started features page slicing and content
Added video of Pip. Added bg texture for overview. Added map for
curriculum. Added list of subnavigation. copied across logo and navabar
yellow colour.

--- a/app/static/_features.html
+++ b/app/static/_features.html
@@ -45,7 +45,22 @@
     <div class="navbar navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
-
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <div class="nav-collapse collapse">
+                <ul class="nav pull-right">
+                    <li><a href="#">Overview</a></li>
+                    <li><a href="#">Curriculum</a></li>
+                    <li><a href="#">Approach</a></li>
+                    <li><a href="#">Stories</a></li>
+                    <li><a href="#">Create</a></li>
+                    <li><a href="#">Parents</a></li>
+                    <li><a href="#">Games</a></li>
+                </ul>
+            </div>
         </div>
       </div>
     </div>
@@ -63,12 +78,18 @@
                     </p>
                 </div>
 
+                <div class="span6 text">
+                    <div class="video-frame"> 
+                        <iframe src="http://player.vimeo.com/video/68630652" width="260" height="200" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div class="head head2" style="height: 350px">
             <div class="container">
                 <div class="span6 text">
+                    <img src="img/features_curriculum_map.png">
                 </div>
                 <div class="span5 text">
                     <h4>Curriculum</h4>
