--- a/app/static/_features.html
+++ b/app/static/_features.html
@@ -45,21 +45,23 @@
     <div class="navbar navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <div class="nav-collapse collapse">
-                <ul class="nav pull-right">
-                    <li><a href="#">Overview</a></li>
-                    <li><a href="#">Curriculum</a></li>
-                    <li><a href="#">Approach</a></li>
-                    <li><a href="#">Stories</a></li>
-                    <li><a href="#">Create</a></li>
-                    <li><a href="#">Parents</a></li>
-                    <li><a href="#">Games</a></li>
-                </ul>
+            <div class="second-nav-bar">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav pull-right">
+                        <li><a href="#overview">Overview</a></li>
+                        <li><a href="#curriculum">Curriculum</a></li>
+                        <li><a href="#approach">Approach</a></li>
+                        <li><a href="#stories">Stories</a></li>
+                        <li><a href="#magicbook">Create</a></li>
+                        <li><a href="#parents">Parents</a></li>
+                        <li><a href="#games">Games</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
       </div>
@@ -69,7 +71,7 @@
         <div class="head">
             <div class="container">
                 <div class="span5 text">
-                    <h4>Overview</h4>
+                    <h4><a name="overview">Overview</a></h4>
                     <p>
                         Developed in consultation with phonics teachers and academics, Learn to read with Pip is a complete, phase-by-phase systematic synthetic phonics programme that will build on your child's phonics experiences in the classroom.  </p>
 
@@ -92,7 +94,7 @@
                     <img src="img/features_curriculum_map.png">
                 </div>
                 <div class="span5 text">
-                    <h4>Curriculum</h4>
+                    <h4><a name="curriculum">Curriculum</a></h4>
                     <p>Learn to read with Pip is appropriate for children between 3-8 years old.</p>
                     <p>Your child will:</p>
                     <p>
@@ -116,7 +118,7 @@
         <div class="head head3">
             <div class="container">
                 <div class="span5 text">
-                    <h4>Approach</h4>
+                    <h4><a name="approach">Approach</a></h4>
                     <p>
                         Learn to read with Pip consists of 240 daily learning sessions, each of which the young learner can complete at their own pace.
                     </p>
@@ -124,15 +126,20 @@
                     <p>Each sessions contains one distinct learning objective and follows the teaching sequence below:</p>
                 </div>
 
+                <div class="span6 text">
+                    <img src='img/features_approach_board.png'>
+
+                </div>
             </div>
         </div>
 
         <div class="head head4">
             <div class="container">
-                <div class="span6 text">
+                <div class="span3 text">
+                    <img src='img/features_stories_man.png'>
                 </div>
-                <div class="span5 text">
-                    <h4>Stories</h4>
+                <div class="span8 text">
+                    <h4><a name="stories">Stories</a></h4>
                     <p>
                         Each unit of five sessions culminates in its own unique story, which allows the young learner to apply their new skills
                         to a real-life context: reading, understanding and enjoying a story.  </p>
@@ -140,7 +147,11 @@
                     <p>
                         All the stories have been creatively led by children’s storywriter Luke Kelly, grandson of Roald Dahl.
                     </p>
+                    <div class="text-center" style="width: 100%">
+                        <img src="img/features_stories_pig.png">
+                    </div>
                 </div>
+
 
             </div>
         </div>
@@ -149,7 +160,7 @@
         <div class="head">
             <div class="container">
                 <div class="span5 text">
-                    <h4>Magic Book</h4>
+                    <h4><a name="magicbook">Magic Book</a></h4>
                     <p>
                         Learning is only useful when it is applied to real life situations which are meaningful for the learner.</p>
 
@@ -158,6 +169,9 @@
                     </p>
                 </div>
 
+                <div class="span6 text">
+                    <img src="img/features_magicbook.png">
+                </div>
             </div>
         </div>
 
@@ -166,11 +180,11 @@
                 <div class="span6 text">
                 </div>
                 <div class="span5 text">
-                    <h4>For Parents</h4>
+                    <h4><a name="parents">For Parents</a></h4>
                     <p>
                         We want to de-mystify for parents the process young learners undertake when they learn to read, including phonics, so they feel more comfortable being involved.</p>
                     <p>
-                        We are creating a bank of online videos which explain all the main concepts and provide access to the child’s progress through the programme via our website.
+                        We are creating a bank of online information which explain all the main concepts and provide access to the child’s progress through the programme via our website.
                     </p>
                 </div>
 
@@ -180,7 +194,7 @@
         <div class="head">
             <div class="container">
                 <div class="span5 text">
-                    <h4>Games</h4>
+                    <h4><a name="games">Games</a></h4>
                     <p>
                         'We believe the best learning happens when learners are having fun.  
                     </p>
@@ -189,7 +203,12 @@
                         the process of learning to read fun and engaging.
                     </p>
                 </div>
+                <div class="span1 text">
+                </div>
 
+                <div class="span5 text">
+                    <img src="img/features_games_splat.jpg">
+                </div>
             </div>
         </div>        
 
@@ -268,6 +287,14 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.countdown.min.js"></script>
     <script src="js/theme.js"></script>
+    <script>
+        $('a').click(function(){
+        $('html, body').animate({
+            scrollTop: $('[name="' + $.attr(this, 'href').substr(1) + '"]').offset().top
+        }, 500);
+        return false;
+        });
+    </script>
 
 </body>
 </html>
