--- a/app/static/index.html
+++ b/app/static/index.html
@@ -72,28 +72,32 @@
             For the backgrounds, you can combine from the bgs folder :D
         -->
         <article class="slide" id="showcasing" style="background: url('img/home_hero_bg_1.jpg') repeat-x top center;">
-            <img class="asset left-30 sp600 t120 z1" src="img/home_hero_item_1.png" />
+            <img class="asset left-30 sp600 t100 z1" src="img/home_hero_item_1.png" />
             <div class="info">
                 <h3>Give your child the magic of reading.</h3>
                 <p>Learn to read with Pip is a digital education programme designed to help your child master the most important skill they will ever learn: how to read.</p>
-                <p>Download for free</p>
-                <p>Find out more</p>
+                <a class="btn btn-large btn-warning">Download for free</a>
+                <br />
+                <br />
+                <p><a href="_features.html">Find out more</a></p>
             </div>
         </article>
         <article class="slide" id="ideas" style="background: url('img/home_hero_bg_2.jpg') repeat-x top center;">
             <div class="info">
                 <h3>Making reading fun. Learn to ready by learning to enjoy reading.</h3>
-                <p>Download for free</p>
+                <p><a class="btn btn-large btn-warning">Download for free</a></p>
             </div>
-            <img class="asset left-210 sp600 t213 z2" src="img/home_hero_item_2.png" />
+            <img class="asset left-210 sp600 t180 z2" src="img/home_hero_item_2.png" />
         </article>
         <article class="slide" id="tour" style="background: url('img/home_hero_bg_3.jpg') repeat-x top center;">
-            <img class="asset left-210 sp600 t213 z2" src="img/home_hero_item_3.png" />
+            <img class="asset left-210 sp600 t113 z2" src="img/home_hero_item_3.png" />
             <div class="info">
                 <h3>It’s simple. Learn to read with Pip and his friends once a day.</h3>
                 <p>Learn to read with Pip is a digital education programme designed to help your child master the most important skill they will ever learn: how to read.</p>
-                <p>Download for free</p>
-                <p>Find out more</p>
+                <p><a class="btn btn-large btn-warning">Download for free</a></p>
+                <br />
+                <br />
+                <p><a href="_features.html">Find out more</a></p>
             </div>
         </article>
     </section>
@@ -104,7 +108,7 @@
             <div class="container">
 
                 <div class="span6 text">
-                    <h4>THE PROGRAMME</h4>
+                    <h4>The Programme</h4>
                     <p>With over 240 fun daily learning sessions, the programme takes the young learner on a journey building and developing their early knowledge of the alphabet all the way up to independently reading, understanding and enjoying stories.</p>
                     <p><a href="_features.html">Read more</a></p>
                 </div>
