--- a/app/static/_features.html
+++ b/app/static/_features.html
@@ -44,7 +44,7 @@
     </div>
     <div class="navbar navbar-inverse">
       <div class="navbar-inner">
-        <div class="container">
+        <div class="container" style="width:940px;">
             <div class="second-nav-bar">
                 <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                     <span class="icon-bar"></span>
