Sorted out footer and social and tidied homepage
Homepage social proper . added shadown bg to homepage footer.

--- a/app/static/_features.html
+++ b/app/static/_features.html
@@ -68,7 +68,7 @@
     </div>
 
     <div id="fpanels">
-        <div class="head">
+        <div class="head head1">
             <div class="container">
                 <div class="span5 text">
                     <h4><a name="overview">Overview</a></h4>
@@ -157,7 +157,7 @@
         </div>
 
 
-        <div class="head">
+        <div class="head head5">
             <div class="container">
                 <div class="span5 text">
                     <h4><a name="magicbook">Magic Book</a></h4>
@@ -191,7 +191,7 @@
             </div>
         </div>
 
-        <div class="head">
+        <div class="head head1">
             <div class="container">
                 <div class="span5 text">
                     <h4><a name="games">Games</a></h4>
