--- a/app/static/_download.html
+++ b/app/static/_download.html
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <div id="fpanels">
+    <div id="fpanels" class="border-bottom-yellow">
       
         <div class="head head4" style="height: 540px">
             <div class="container">
@@ -66,7 +66,7 @@
 
                     <div class="span1">
                     </div>
-                    
+
                     <div class="span3 text download-box blue-border">
                         <div class="download-blue-dots download-texture">
                             <h2><a href="#">Free</a></h2>
@@ -111,7 +111,7 @@
             </div>
         </div>
 
-        <div class="container" style="padding-top: 40px;">
+        <div class="container" style="padding-top: 20px;">
             <div class="row social">
                 <div class="row info">
                     <div class="span12">
