Created about pages, contact and team pages. also added email sign in form

--- a/app/static/_login.html
+++ b/app/static/_login.html
@@ -110,9 +110,9 @@
                         <h5><a href="_download.html">Download</a></h5>
                     </div>
                     <div class="span2">
-                        <h5><a href="#">About</a></h5>
-                        <p><a href="#">Team</a></p>
-                        <p><a href="#">Contact us</a></p>
+                        <h5><a href="_about-us.html">About</a></h5>
+                        <p><a href="_team.html">Team</a></p>
+                        <p><a href="_contact-us.html">Contact us</a></p>
                     </div>
                     <div class="span2">
                         <h5><a href="#">Account</a></h5>
