--- a/app/static/_download.html
+++ b/app/static/_download.html
@@ -82,13 +82,13 @@
 
                     <div class="span3 text download-box green-border">
                         <div class="download-orange-dots download-texture">
-                            <h2><a href="#">One off Payment</a></h2>
+                            <h2><a href="_beta-testing.html">One off Payment</a></h2>
                         </div>
                         <div class="padding-small">
                             <p>This plan gives you and your child free access to the first 2 weeks of the learning programme, as well as lots of other fun games and stories.</p>
                         </div>
                         <div class="text-center">
-                            <p><a href="#" class="btn btn-large btn-warning">Download</a></p>
+                            <p><a href="_beta-testing.html" class="btn btn-large btn-warning">Download</a></p>
                             <h4>£100</h4>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                             <p>This plan gives you and your child free access to the first 2 weeks of the learning programme, as well as lots of other fun games and stories.</p>
                         </div>
                         <div class="text-center">
-                            <p><a href="#" class="btn btn-large btn-warning">Download</a></p>
+                            <p><a href="_beta-testing.html" class="btn btn-large btn-warning">Download</a></p>
                             <h4>£20 per month</h4>
                         </div>
                     </div>
@@ -161,9 +161,9 @@
                         <h5><a href="_download.html">Download</a></h5>
                     </div>
                     <div class="span2">
-                        <h5><a href="#">About</a></h5>
-                        <p><a href="#">Team</a></p>
-                        <p><a href="#">Contact us</a></p>
+                        <h5><a href="_about-us.html">About</a></h5>
+                        <p><a href="_team.html">Team</a></p>
+                        <p><a href="_contact-us.html">Contact us</a></p>
                     </div>
                     <div class="span2">
                         <h5><a href="#">Account</a></h5>
