Media Queries added for homepage and features page

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -31,9 +31,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand logo" href="index.html">
-                    <strong><img src="img/logo_top_corner.png"></strong>
-                </a>
+                <h1 id="logo-symbol">
+                    <a class="brand logo" id="logo-symbol-link" href="index.html">
+                        
+                    </a>
+                </h1>
                 <div class="nav-collapse collapse">
                     <ul class="nav pull-right">
                         <li><a href="index.html">HOME</a></li>
@@ -72,7 +74,7 @@
             For the backgrounds, you can combine from the bgs folder :D
         -->
         <article class="slide" id="showcasing" style="background: url('img/home_hero_bg_1.jpg') repeat-x top center;">
-            <img class="asset left-30 sp2000 t100 z1" src="img/home_hero_item_1.png" />
+            <img class="asset left-30 sp8000 t100 z1" src="img/home_hero_item_1.png" />
             <div class="info">
                 <h3>Give your child the magic of reading.</h3>
                 <p>Learn to read with Pip is a digital education programme designed to help your child master the most important skill they will ever learn: how to read.</p>
@@ -101,6 +103,11 @@
             </div>
         </article>
     </section>
+
+    <div class="small-device-banner">
+        <h2 class="text-center">Making learning to read fun!</h2>
+        <img src="img/pip_homepage_small_device.png">
+    </div>
     <div class="red-border label-bg">
         <div class="container">
             <div class="span5">
