--- a/app/static/_features.html
+++ b/app/static/_features.html
@@ -28,9 +28,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand logo" href="index.html">
-                    <strong><img src="img/logo_top_corner.png"></strong>
-            </a>
+            <h1 id="logo-symbol">
+                    <a class="brand logo" id="logo-symbol-link" href="index.html">
+                        
+                    </a>
+                </h1>
             <div class="nav-collapse collapse">
                 <ul class="nav pull-right">
                     <li><a href="index.html">HOME</a></li>
@@ -88,7 +90,7 @@
             </div>
         </div>
 
-        <div class="head head2" style="height: 350px">
+        <div class="head head2">
             <div class="container">
                 <div class="span6 text">
                     <img src="img/features_curriculum_map.png">
