more media query changes - mainly for ipad sizes

--- a/app/static/_about-us.html
+++ b/app/static/_about-us.html
@@ -80,7 +80,7 @@
         </div>   
     </div>
 
-     <div id="fpanels" style="background: url('img/sky_background.png') repeat-x top center;">
+     <div id="fpanels" class="sky-blue-background">
         <div class="head4" style="height: auto;">
             <div class="container">
       
