--- a/app/static/_features.html
+++ b/app/static/_features.html
@@ -92,7 +92,7 @@
 
         <div class="head head2">
             <div class="container">
-                <div class="span6 text">
+                <div class="span6 text curriculum-map-image">
                     <img src="img/features_curriculum_map.png">
                 </div>
                 <div class="span5 text">
