--- a/app/static/_characters.html
+++ b/app/static/_characters.html
@@ -67,7 +67,7 @@
 
     
 
-     <div id="fpanels" style="background: url('img/sky_background.png') repeat-x top center;">
+     <div id="fpanels" class="sky-blue-background">
         <div class="head4" style="height: auto;">
             <div class="container">
       
