--- a/app/static/index.html
+++ b/app/static/index.html
@@ -113,7 +113,7 @@
     <div class="padding-30">
         <div class="">
             <div class="container">
-                <h1 class="iphone-beta-test btn btn-large btn-warning"><a href="_beta-testing.html">Beta testing signup</a></h1>
+                <h1 class="iphone-beta-test btn btn-large btn-warning"><a href="_beta-testing.html" style="font-size: 28pt">Beta testing signup</a></h1>
                 <div class="row red-border label-bg">
                     <div class="span5">
 
