--- a/app/static/_download.html
+++ b/app/static/_download.html
@@ -77,7 +77,7 @@
                             <p>This plan gives you and your child free access to the first 2 weeks of the learning programme, as well as lots of other fun games and stories.</p>
                         </div>
                         <div class="text-center">
-                            <p><a href="#" class="btn btn-large btn-warning">Download</a></p>
+                            <p><a href="_beta-testing.html" class="btn btn-large btn-warning">Download</a></p>
                             <h4>Free</h4>
                         </div>
                     </div>
