Google Analytics added

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -110,7 +110,9 @@
                     </div>
                 
     </div>
-    <div class="padding-30">
+		<div align="center"><img src="img/download_shadow_container.png" align="middle" />
+	</div>
+	<div class="padding-30">
         <div class="">
             <div class="container">
                 <h1 class="iphone-beta-test btn btn-large btn-warning"><a href="_beta-testing.html" style="font-size: 28pt">Beta testing signup</a></h1>
@@ -150,6 +152,8 @@
             </div>
         </div>
     </div>
+	
+	
 
     <div id="fpanels" style="margin-top: 0px;" class="homepage">
       
@@ -247,8 +251,20 @@
                 </div>
             </div>
         </div>
+		
     </footer>
+    <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-42172602-1']);
+    _gaq.push(['_trackPageview']);
 
+    (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+    </script>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.countdown.min.js"></script>
