--- a/app/static/_education-for-parents.html
+++ b/app/static/_education-for-parents.html
@@ -76,7 +76,7 @@
         <div class="head head1">
             <div class="container">
                 <div class="span5 text">
-                    <h4><a name="overview">Overview</a></h4>
+                    <h4><a name="phonics">What is phonics?</a></h4>
                     <p>
                         Developed in consultation with phonics teachers and academics, Learn to read with Pip is a complete, phase-by-phase systematic synthetic phonics programme that will build on your child's phonics experiences in the classroom.  </p>
 
@@ -99,7 +99,7 @@
                     <img src="img/features_curriculum_map.png">
                 </div>
                 <div class="span5 text">
-                    <h4><a name="curriculum">Curriculum</a></h4>
+                    <h4><a name="blending">What is blending?</a></h4>
                     <p>Learn to read with Pip is appropriate for children between 3-8 years old.</p>
                     <p>Your child will:</p>
                     <p>
@@ -122,8 +122,7 @@
 
         <div class="head head3">
             <div class="container">
-                <div class="span5 text">
-                    <h4><a name="approach">Approach</a></h4>
+                <div class="span5 text">What is segmenting?</a></h4>
                     <p>
                         Learn to read with Pip consists of 240 daily learning sessions, each of which the young learner can complete at their own pace.
                     </p>
@@ -144,7 +143,7 @@
                     <img src='img/features_stories_man.png'>
                 </div>
                 <div class="span8 text">
-                    <h4><a name="stories">Stories</a></h4>
+                    <h4><a name="stories">Keywords? What on earth are they?</a></h4>
                     <p>
                         Each unit of five sessions culminates in its own unique story, which allows the young learner to apply their new skills
                         to a real-life context: reading, understanding and enjoying a story.  </p>
@@ -165,7 +164,7 @@
         <div class="head head5">
             <div class="container">
                 <div class="span5 text">
-                    <h4><a name="magicbook">Magic Book</a></h4>
+                    <h4><a name="magicbook">CVC, CVCC, CCVC...</a></h4>
                     <p>
                         Learning is only useful when it is applied to real life situations which are meaningful for the learner.</p>
 
