Top navigation order changed

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -38,9 +38,9 @@
                 </h1>
                 <div class="nav-collapse collapse">
                     <ul class="nav pull-right">
-                        <li><a href="index.html">HOME</a></li>
+						<li><a href="_features.html">FEATURES</a></li>
                         <li><a href="_download.html">DOWNLOAD</a></li>
-                        <li><a href="_features.html">FEATURES</a></li>
+						<li><a href="_about.html">ABOUT</a></li>
                         <li><a href="_login.html">LOGIN</a></li>
                     </ul>
                 </div>
@@ -110,7 +110,7 @@
                     </div>
                 
     </div>
-		<div align="center"><img src="img/download_shadow_container.png" align="middle" />
+		<div align="center"><img src="img/download_shadow_container_960px.png" align="middle" />
 	</div>
 	<div class="padding-30">
         <div class="">
