--- a/app/static/_education-for-parents.html
+++ b/app/static/_education-for-parents.html
@@ -21,29 +21,29 @@
 </head>
 <body>
     <div class="navbar navbar-static-top">
-      <div class="navbar-inner">
-        <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <h1 id="logo-symbol">
+          <div class="navbar-inner">
+            <div class="container">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <h1 id="logo-symbol">
                     <a class="brand logo" id="logo-symbol-link" href="index.html">
                         
                     </a>
                 </h1>
-            <div class="nav-collapse collapse">
-                <ul class="nav pull-right">
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="_download.html">DOWNLOAD</a></li>
-                    <li><a href="_features.html">FEATURES</a></li>
-                    <li><a href="_login.html">LOGIN</a></li>
-                </ul>
+                <div class="nav-collapse collapse">
+                    <ul class="nav pull-right">
+						<li><a href="_features.html">FEATURES</a></li>
+                        <li><a href="_download.html">DOWNLOAD</a></li>
+						<li><a href="_about.html">ABOUT</a></li>
+                        <li><a href="_login.html">LOGIN</a></li>
+                    </ul>
+                </div>
             </div>
+          </div>
         </div>
-      </div>
-    </div>
     <div class="navbar navbar-inverse">
       <div class="navbar-inner">
         <div class="container" style="width:940px;">
