--- a/app/static/_beta-testing.html
+++ b/app/static/_beta-testing.html
@@ -35,9 +35,9 @@
                 </h1>
                 <div class="nav-collapse collapse">
                     <ul class="nav pull-right">
-						<li><a href="_features.html">FEATURES</a></li>
+                        <li><a href="_features.html">FEATURES</a></li>
                         <li><a href="_download.html">DOWNLOAD</a></li>
-						<li><a href="_about.html">ABOUT</a></li>
+                        <li><a href="_about-us.html">ABOUT</a></li>
                         <li><a href="_login.html">LOGIN</a></li>
                     </ul>
                 </div>
