finished off most things on parent info page and done the slot machine making sounds and positioned

--- a/app/static/_features.html
+++ b/app/static/_features.html
@@ -37,7 +37,8 @@
                     <ul class="nav pull-right">
 						<li><a href="_features.html">FEATURES</a></li>
                         <li><a href="_download.html">DOWNLOAD</a></li>
-						<li><a href="_about.html">ABOUT</a></li>
+                        <li><a href="_about-us.html">ABOUT</a></li>
+                        <li><a href="_education-for-parents.html">FOR PARENTS</a></li>
                         <li><a href="_login.html">LOGIN</a></li>
                     </ul>
                 </div>
@@ -90,7 +91,7 @@
             </div>
         </div>
 
-        <div class="head head2">
+        <div class="head head2 shadow-top">
             <div class="container">
                 <div class="span6 text curriculum-map-image">
                     <img src="img/features_curriculum_map.png">
@@ -135,7 +136,7 @@
             </div>
         </div>
 
-        <div class="head head4">
+        <div class="head head4 shadow-top">
             <div class="container">
                 <div class="span3 text">
                     <img src='img/features_stories_man.png'>
@@ -177,7 +178,7 @@
             </div>
         </div>
 
-        <div class="head head2">
+        <div class="head head2 shadow-top">
             <div class="container">
                 <div class="span6 text">
                     <img src="img/parent_image.png">
