--- a/app/static/index.html
+++ b/app/static/index.html
@@ -40,7 +40,8 @@
                     <ul class="nav pull-right">
 						<li><a href="_features.html">FEATURES</a></li>
                         <li><a href="_download.html">DOWNLOAD</a></li>
-						<li><a href="_about.html">ABOUT</a></li>
+						<li><a href="_about-us.html">ABOUT</a></li>
+                        <li><a href="_education-for-parents.html">FOR PARENTS</a></li>
                         <li><a href="_login.html">LOGIN</a></li>
                     </ul>
                 </div>
