added internal links to parent education page

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -76,7 +76,7 @@
         -->
         <article class="slide" id="showcasing" style="background: url('img/home_hero_bg_1.jpg') repeat-x top center;">
             <img class="asset left-30 sp8000 t100 z1" src="img/home_hero_item_1.png" />
-            <div class="info">
+            <div class="info" style="margin-top: 30px;">
                 <h2>Give your child the magic of reading.</h2>
                 <p>Learn to read with Pip is a digital education programme designed to help your child master the most important skill they will ever learn: how to read.</p>
                 <a href="_beta-testing.html" class="btn btn-large btn-warning">Download for free</a>
