--- a/app/static/index.html
+++ b/app/static/index.html
@@ -235,6 +235,9 @@
                         <h5>Resources</h5>
                         <p><a href="_characters.html">Characters</a></p>
                         <p><a href="_story.html">The Story</a></p>
+                        <p><a href="assets/terms.pdf" target="_blanK">Terms</a></p>
+                        <p><a href="assets/privacy.pdf" target="_blank">Privacy</a></p>
+
                     </div>
                     
                     
