made sophies changes to the copy

--- a/app/static/_download.html
+++ b/app/static/_download.html
@@ -86,7 +86,14 @@
                             <h2><a href="_beta-testing.html">One off Payment</a></h2>
                         </div>
                         <div class="padding-small download-text-box">
-                            <p>This plan gives you and your child full and unlimited access to the entire learning programme. This includes the entire 240 daily learning sessions, all the games, all the 44 stories, the skill introduction animations and the progress reporting.</p>
+                            <p>This plan gives you and your child full and unlimited access to the entire learning programme. This includes:</p>
+                            <ul>
+                                <li>The 240 learning sessions</li>
+                                <li>All the games</li>
+                                <li>48 illustrated and narrated stories</li>
+                                <li>Animations</li>
+                                <li>Progress reporting</li>
+                            </ul>
                         </div>
                         <div class="text-center">
                             <p><a href="_beta-testing.html" class="btn btn-large btn-warning">Download</a></p>
@@ -99,7 +106,14 @@
                             <h2><a href="#">Subscription</a></h2>
                         </div>
                         <div class="padding-small download-text-box">
-                            <p>This plan gives you and your child full access for each month you subscribe. This includes the entire 240 daily learning sessions, all the games, all the 44 stories, the skill introduction animations and the progress reporting.</p>
+                            <p>This plan gives you and your child full access for each month of your subscription. This includes:</p>
+                            <ul>
+                                <li>The 240 learning sessions</li>
+                                <li>All the games</li>
+                                <li>48 illustrated and narrated stories</li>
+                                <li>Animations</li>
+                                <li>Progress reporting</li>
+                            </ul>
                         </div>
                         <div class="text-center">
                             <p><a href="_beta-testing.html" class="btn btn-large btn-warning">Download</a></p>
