--- a/app/static/_features.html
+++ b/app/static/_features.html
@@ -157,7 +157,7 @@
                         The complexity of language in the stories grows with the developing abilities of the child.</p>
 
                     <p>
-                        All the stories have been creatively led by children’s storywriter Luke Kelly, grandson of Roald Dahl.
+                        All the stories have been creatively designed by children’s storywriter Luke Kelly, grandson of Roald Dahl.
                     </p>
                     <div class="text-center" style="width: 100%">
                         <img src="img/features_stories_pig.png">
@@ -174,7 +174,7 @@
                 <div class="span5 text">
                     <h4><a name="magicbook">Magic Book</a></h4>
                     <p>
-                        Learning is most useful when it is applied to real life situations which are meaningful for the learner.</p>
+                        Learning is most enjoyable when it is applied to real life situations which are meaningful for the learner.</p>
 
                     <p>
                         Throughout the programme your child combines their newly acquired skills with their creative imagination to create their very own Magic Book, filled with letters, words and pictures.
