small changes to layout on homepage

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -133,14 +133,24 @@
     <div id="fpanels" style="margin-top: 0px;" class="homepage">
           <div class="head head4 shadow-top-960">
             <div class="container">  
-                <div class="span6 text">
-                    <p style="margin-bottom: 30px;">With over 240 daily learning sessions, the programme takes the young learner on a journey designed to build and develop their early knowledge of the alphabet.  At the end of this journey, your child will have learnt and practised the tools he or she needs to read, understand and enjoy stories independently.</p>
-                    <p><a href="_features.html" class="btn btn-large btn-success">Find out more</a></p>
-                    <h2>OR</h2>
-                    <p><a href="_download.html" class="btn btn-large btn-success">Try the programme</a></p>
+                <div class="row text">
+                    <div style="margin-bottom: 30px;">
+                        <div class="span6 text-center">
+                            <h3>For children</h3>
+                            <p>The <strong>Learn to read with Pip</strong> programme helps children learn, practise and develop the key skills they need to become confident, independent readers.</p>
+                        </div>
+                        <div class="span6 text-center">
+                            <h3>For parents</h3>
+                            <p style="margin-bottom: 30px;">We provide state-of-the-art tools to show your child's current reading level and their progress over time.</p>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                    <p class="text-center" style="margin-top: 30px"><a href="_features.html" class="btn btn-large btn-success">Find out more</a></p>
+                    <h2 class="text-center">OR</h2>
+                    <p class="text-center"><a href="_download.html" class="btn btn-large btn-success">Try the programme</a></p>
                 </div>
 
-                <div class="span5 text"><img src="img/homepage_characters.png">
+                <div class="span12 text-center text" style='margin-top: 30px;'><img src="img/homepage_characters.png">
                 </div>
             </div>
         </div>
