changes to hoempage - included video

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -126,7 +126,7 @@
         <h2 class="text-center">Learn to read with Pip</h2>
         
                     <div class="video-frame"> 
-                        <iframe src="http://player.vimeo.com/video/68630652" width="260" height="200" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                        <iframe src="http://player.vimeo.com/video/70019832" width="260" height="200" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                     </div>            
     </div>
 	
@@ -145,12 +145,13 @@
                         </div>
                     </div>
                     <div class="clearfix"></div>
-                    <p class="text-center" style="margin-top: 30px"><a href="_features.html" class="btn btn-large btn-success">Find out more</a></p>
+                    <p class="text-center" style="margin-top: 30px"><a href="_features.html" class="btn btn-large btn-success">How it works</a></p>
                     <h2 class="text-center">OR</h2>
                     <p class="text-center"><a href="_download.html" class="btn btn-large btn-success">Try the programme</a></p>
                 </div>
 
-                <div class="span12 text-center text" style='margin-top: 30px;'><img src="img/homepage_characters.png">
+                <div class="text-center text video-container-homepage">
+                    <iframe src="http://player.vimeo.com/video/70019832" width="500" height="375" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                 </div>
             </div>
         </div>
