--- a/app/static/_readingchallenge.html
+++ b/app/static/_readingchallenge.html
@@ -67,7 +67,12 @@
                  <a href='#'><img src='assets/game/pictureframe_right.png' id='picture-frame-right'></a>
                 
                  <a href='#'><img src='assets/fruitmachine_website/fruitmachine_body.png' id='fruitmachine-body'></a>
+                
+                 <div id="progress-bar">
+                    <img src='assets/game/progress_orange_small.png' id='timer-progress-bar' />
+                    <img src='assets/game/progress_frame_small.png' id='timer-progress-frame'/>
 
+                 </div>
                </div>
             </div>            
         </div>
