--- a/app/static/_readingchallenge.html
+++ b/app/static/_readingchallenge.html
@@ -76,18 +76,18 @@
                 </a>
                 </div>
                 
-                <div id=fruitmachine-body>
+                <div id="fruitmachine-body">
                 <p id="correct-word-position"></p>
-                 <a href='#'>
-                    <img src='assets/game/fruitmachine/special_fruitmachine_farm_0_letterslot_single_zoom.png'>
-                    <img src='assets/game/fruitmachine/special_fruitmachine_farm_0_body_zoom.png'>
-
-                </a>
+                
                 </div>
                 <div id="progress-bar">
                     <img src='assets/game/progress_orange_small.png' id='timer-progress-bar' />
                     <img src='assets/game/progress_frame_small.png' id='timer-progress-frame'/>
 
+                 </div>
+                 <div id="score">
+                    <img src='assets/game/game_score_circle.png' id='game-score-circle' />
+                    <span id="displayCounter" />
                  </div>
                </div>
             </div>            
