images now chosen randomly.

--- a/app/static/_readingchallenge.html
+++ b/app/static/_readingchallenge.html
@@ -134,14 +134,14 @@
                         
                     </div>
 
-                    <div id='picture-frame-left' class="correct-answer-class">
+                    <div id='picture-frame-left' class="">
                         <a href='#'>
                             <img src='assets/game/pictureframe_left.png'>
                             <img src='' id='game-image-left'>
                         </a>
                     </div>
                     
-                    <div id='picture-frame-right' class='incorrect-answer-class'>
+                    <div id='picture-frame-right' class=''>
                      <a href='#'>
                         <img src='assets/game/pictureframe_right.png'>
                         <img src='' id='game-image-right'>
