--- a/app/static/_readingchallenge.html
+++ b/app/static/_readingchallenge.html
@@ -57,8 +57,25 @@
     <div id="fpanels" class='reading-challenge'>
         <div class="not-ready-yet">
             <div class="container">
-               <div id="play-game-button">
-                    <a href="#" class="btn btn-large btn-success">Play game</a>
+               <div class="comparison-container-box">
+                        <h1>Choose the correct picture!</h1>
+                        <form action='' id='reveal-graph'>
+                            <br />
+                            <select id = "age">
+                                <option selected>Choose your child's age</option>
+                                <option>3 years</option>
+                                <option>3.5 years</option>
+                                <option>4 years</option>
+                                <option>4.5 years</option>
+                                <option>5 years</option>
+                                <option>5.5 years</option>
+                                <option>6 years</option>
+                            </select>
+                            <br />
+                            <a href="#" class="btn btn-large btn-success">Play game</a></input>
+                        </form>
+                    </div>
+                   
                </div>
 
                <div id="flash-message"><p></p></div>
